# fast-api-introduction

./: pyproject.toml
api/: main.py
api/cruds/: task.py
api/models/: task.py
api/routers/: calc.py  task.py
api/schemas/: calc.py  task.py
medical_support/: class.py
tests/: test_main.py
