[project]
name = "demo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (==0.63.0)",
    "uvicorn (==0.13.3)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "aiomysql (>=0.3.2,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (==0.15.1)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "httpx (==0.20.0)"
]
